--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         async
         src="https://tenor.com/embed.js"
       ></script>
-      <h1>DO you love me? 🤗</h1>
-      <p>~techeonn tera hi hai</p>
+      <h1>Do you love me? 🤗</h1>
+      <p>~Ye dil tera hi hai</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
