--- a/no2.html
+++ b/no2.html
@@ -28,8 +28,8 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>Ek aur baar Soch le! 😣</h1>
-      <p>kyu aisa kr rahi hai 😣</p>
+      <h1>Ek baar or Soch le! 😣</h1>
+      <p>Aisa kyu kar rahi hai 😣</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
