--- a/no3.html
+++ b/no3.html
@@ -30,8 +30,8 @@
         src="https://tenor.com/embed.js"
       ></script>
 
-      <h1>Manja na! Kitna bhav khaegi 😭</h1>
-      <p>bht glt baat hai 😭</p>
+      <h1>Maan ja na! Kitna bhav khaegi 😭</h1>
+      <p>bohot glt baat hai 😭</p>
 
       <div class="btn">
         <a href="yes.html">Yes</a>
