--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ask Her Out</title>
 
     <link rel="stylesheet" href="./style.css" />
+    <meta name="google-site-verification" content="lHQO4P0mJ_qJ9fCbRZLMj9cijoikXJjav-9_bQAMvpo" />
   </head>
   <body>
     <div class="container">
