--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="./style.css" />
     <meta name="google-site-verification" content="lHQO4P0mJ_qJ9fCbRZLMj9cijoikXJjav-9_bQAMvpo" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5348062747318498"
+     crossorigin="anonymous"></script>
   </head>
   <body>
     <div class="container">
